--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
 				<li class="divider-vertical"></li>
 				<li><a href="#" class="icoTwitter" title="Twitter"><i
 						class="fa fa-twitter fa-1x"></i></a></li>
+						<li class="divider-vertical"></li>
+				<li><a href="#" class="icoinstagram" title="Instagram"><i
+						class="fa fa-instagram fa-1x"></i></a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
